plugins/samples/aws_sigv4/deploy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: aws_backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: aws_cluster
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: aws_sigv4_plugin
                root_id: ""
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {"access_key":"YOUR_AWS_ACCESS_KEY_ID","secret_key":"YOUR_AWS_SECRET_ACCESS_KEY","region":"YOUR_AWS_REGION","service":"s3","signature_type":"v4"}
                vm_config:
                  runtime: envoy.wasm.runtime.v8
                  code:
                    local:
                      filename: /etc/envoy/plugin_rust.wasm
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: aws_cluster
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: aws_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: YOUR_BUCKET_NAME.s3.YOUR_AWS_REGION.amazonaws.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: YOUR_BUCKET_NAME.s3.YOUR_AWS_REGION.amazonaws.com

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
